--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "google-auth-library": "^9.4.1",
+    "googleapis": "^129.0.0",
     "ioredis": "^5.3.2",
     "nestjs-typeorm-paginate": "^4.0.4",
     "nodemailer": "^6.9.7",
