feat: add some feature

--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,10 @@ lerna-debug.log*
 
 #env
 .env
-.yarn
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
